# AWDP_PWN_Helper

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pwn_helper.slnx
Test1/: AdvancedPwnDetectors.hpp  FormatStringDetector.hpp  IDetector.hpp  PatchEngine.hpp  ScannerEngine.hpp  StackDetector.hpp  Test1.vcxproj  Test1.vcxproj.filters  VulnData.hpp  main.cpp
